<resources>
    <string name="app_name">HawkTalk</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to user -->
    <string name="usr_first_name">Steve</string>
    <string name="usr_last_name">Nash</string>
    <string name="usr_email">nash1310@mylaurier.ca</string>
    <string name="usr_gender">Male</string>
    <string name="usr_year">N/A</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings for navigation drawer -->
    <string name="nav_header_title">N/A</string>
    <string name="nav_header_subtitle">say less</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    <!-- Strings for titles -->
    <string name="title_groups">Groups</string>
    <string name="title_friends">Friends</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_status">Show online status</string>
    <string name="pref_description_status">Let friends know you\'re currently online</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Steve Nash</string>

    <string name="pref_title_friends_add">Let people add you as a friend</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>Mutuals</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- settings for Account -->
    <string name="pref_title_account">Account</string>

    <string name="pref_account_logout">Log Out</string>
    <string name="pref_account_delete">Delete Account</string>
</resources>
