<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom" android:id="@+id/linearLayout">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/profile_picture" android:cropToPadding="false"
            tools:layout_conversion_absoluteHeight="80dp" tools:layout_editor_absoluteY="34dp"
            tools:layout_editor_absoluteX="16dp" tools:layout_conversion_absoluteWidth="72dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@+id/header_name"
            android:visibility="visible" android:text="@string/nav_header_title"
            android:textColor="@android:color/white"
            tools:layout_conversion_absoluteHeight="27dp" tools:layout_editor_absoluteY="114dp"
            tools:layout_editor_absoluteX="16dp" tools:layout_conversion_absoluteWidth="25dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:id="@+id/sayless" android:visibility="visible" tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_editor_absoluteY="141dp" tools:layout_editor_absoluteX="16dp"
            tools:layout_conversion_absoluteWidth="185dp" android:textColor="@android:color/white"/>

</LinearLayout>
